# yingmhd-tools

./: .gitignore  DESIGN.md  README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
.github/workflows/: release.yml
src/: App.tsx  index.css  main.tsx  monaco.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src-tauri/src/commands/: mod.rs  port.rs  settings.rs  shortcut.rs
src-tauri/src/tray/: tray.rs
src-tauri/src/utils/: platform.rs
src/components/: ConfirmDialog.tsx  Layout.tsx  ShortcutConflictDialog.tsx  Toast.tsx
src/components/ui/: button.tsx  card.tsx  dialog.tsx  input.tsx  switch.tsx
src/core/command/: CommandManager.ts  index.ts
src/core/plugin/: PluginManager.ts  index.ts
src/core/search/: FuseSearch.ts  index.ts
src/hooks/: useGlobalShortcut.ts  useTheme.ts  useToast.ts
src/launcher/: Launcher.tsx  LauncherInput.tsx  LauncherResults.tsx
src/pages/: Dashboard.tsx  JsonEditor.tsx  PortManager.tsx  Settings.tsx
src/plugin/: index.ts
src/plugins/json-editor/: commands.ts  index.ts
src/plugins/port-manager/: commands.ts  index.ts
src/services/: portService.ts
src/stores/: appStore.ts  commandStore.ts  jsonStore.ts  pluginStore.ts  portStore.ts
src/types/: index.ts
src/utils/: cn.ts  json.ts
